--- a/TA-SecOnion_Hunting/default/data/ui/views/suricata_alert_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/suricata_alert_overview.xml
@@ -1,13 +1,17 @@
 <form version="1.1" theme="dark" onunloadCancelJobs="true">
-  <label>Suricata Alert Overview (V5.9.3)</label>
+  <label>Suricata Alert Overview (V5.9.4)</label>
   <description>V5 Additions: Dashboard Now Integrates Drilldown</description>
-  <search id="TstatsBaseSearch">
+  <search id="MainBaseSearch">
     <query>| tstats summariesonly=f count from datamodel=Suricata_Suite.alerts by alerts.severity, alerts.signature, alerts.category, alerts.src_ip, alerts.src_port, alerts.dest_ip, alerts.dest_port, alerts.proto, alerts.sid, alerts.community_id, alerts.payload_printable, _time
 | rename alerts.severity AS severity, alerts.signature AS signature, alerts.category AS category, alerts.src_ip AS src_ip, alerts.src_port AS src_port, alerts.dest_ip AS dest_ip, alerts.dest_port AS dest_port, alerts.proto AS proto, alerts.sid AS SID, alerts.community_id AS community_id, alerts.payload_printable AS payload_printable
 | stats count by severity, signature, category, src_ip, src_port, dest_ip, dest_port, proto, SID, community_id, payload_printable, _time
 
 ```Filter Out Specific Alerts Here```
-```| where !like (src_ip, "1.1.1.1") AND !like (payload_printable, "NMAP")```
+| where !like (signature, "ET DNS Query for .cc TLD") AND !like (dest_ip,"1.1.1.1")
+
+```Rule Filtering```
+| where !like (signature, "ET SCAN Suspicious%")
+| where !like (signature, "ET SCAN Behavioral Unusual%")
 
 </query>
     <earliest>$time.earliest$</earliest>
@@ -45,9 +49,22 @@ match(src_ip,"^((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\.?\b){4}$"),"True")</set>
 | mvexpand src_port
 | mvexpand dest_port
 | where (src_port &lt; tonumber(1025) OR src_port = "High Port") AND (dest_port &lt; tonumber(1025) OR dest_port = "High Port")</set>
+      <unset token="sid"></unset>
+      <unset token="ip"></unset>
+      <unset token="cid"></unset>
+      <set token="showscanner">ShowMe</set>
+    </done>
+  </search>
+    <search id="ScannerBaseSearch">
+    <query>| tstats summariesonly=f count from datamodel=Suricata_Suite.alerts by alerts.severity, alerts.signature, alerts.category, alerts.src_ip, alerts.src_port, alerts.dest_ip, alerts.dest_port, alerts.proto, alerts.sid, alerts.community_id, alerts.payload_printable, _time
+| rename alerts.severity AS severity, alerts.signature AS signature, alerts.category AS category, alerts.src_ip AS src_ip, alerts.src_port AS src_port, alerts.dest_ip AS dest_ip, alerts.dest_port AS dest_port, alerts.proto AS proto, alerts.sid AS SID, alerts.community_id AS community_id, alerts.payload_printable AS payload_printable
+| stats count by severity, signature, category, src_ip, src_port, dest_ip, dest_port, proto, SID, community_id, payload_printable, _time
+</query>
+    <earliest>$time.earliest$</earliest>
+    <latest>$time.latest$</latest>
+    <done>
       <set token="ScannerQuery">| stats count by src_ip, scannertype
-```Filter By Amounts Here```
-```| where count > 5```
+| where count&gt;15
 | fields - count
 | mvcombine src_ip
 | rename src_ip AS "Scanner IP", scannertype AS "Scanner Type"</set>
@@ -70,7 +87,7 @@ match(src_ip,"^((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\.?\b){4}$"),"True")</set>
     <panel>
       <title>Total Alerts</title>
       <single>
-        <search base="TstatsBaseSearch">
+        <search base="MainBaseSearch">
           <query>| stats count</query>
         </search>
         <option name="link.visible">false</option>
@@ -90,7 +107,7 @@ match(src_ip,"^((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\.?\b){4}$"),"True")</set>
     <panel>
       <title>Severity Totals</title>
       <table>
-        <search base="TstatsBaseSearch">
+        <search base="MainBaseSearch">
           <query>| stats count by severity
 $HighToLow$
 $Formating$</query>
@@ -110,7 +127,7 @@ $Formating$</query>
     <panel>
       <title>Unique Signature Totals</title>
       <table>
-        <search base="TstatsBaseSearch">
+        <search base="MainBaseSearch">
           <query>| stats count by severity, signature
 | stats count by severity
 $HighToLow$
@@ -140,7 +157,7 @@ $Formating$</query>
     <panel depends="$showscanner$">
       <title>Scanners Currently Not Be Filtered In Known_Scanners.csv (Pre-Datamodel Ingest)</title>
       <table>
-        <search base="TstatsBaseSearch">
+        <search base="ScannerBaseSearch">
           <done>
             <condition match="$job.resultCount$ == 0">
               <unset token="showscanner"></unset>
@@ -148,7 +165,7 @@ $Formating$</query>
           </done>
           <query>```Add Scanner Flags And Types Here:```
 | appendpipe [| where like (payload_printable, "%nessus%") | eval scannertype="Nessus"]
-| appendpipe [| where like (payload_printable, "%Nmap Scripting Engine%") OR like (signature, "ET SCAN NMAP OS Detection Probe") | eval scannertype="Nmap"]
+| appendpipe [| where like (payload_printable, "CCCCCCCCCCCCC%CCCCCCCCCCCCC") OR like (payload_printable, "%Nmap Scripting Engine%")| eval scannertype="Nmap"]
 
 $ScannerQuery$</query>
         </search>
@@ -174,7 +191,7 @@ $ScannerQuery$</query>
       <title>Unique Alert Breakdown</title>
       <table>
         <title>Select A SID</title>
-        <search base="TstatsBaseSearch">
+        <search base="MainBaseSearch">
           <query>| stats count by severity, signature, category, SID
 $HighToLow$
 $Formating$</query>
@@ -213,7 +230,7 @@ $Formating$</query>
   <row depends="$sid$">
     <panel>
       <table>
-        <search base="TstatsBaseSearch">
+        <search base="MainBaseSearch">
           <done>
             <unset token="ip"></unset>
             <unset token="cid"></unset>
@@ -251,7 +268,7 @@ $Formating$</query>
   <row depends="$ip$">
     <panel>
       <table>
-        <search base="TstatsBaseSearch">
+        <search base="MainBaseSearch">
           <done>
             <unset token="cid"></unset>
           </done>
@@ -288,12 +305,12 @@ $Formating$</query>
   <row depends="$cid$">
     <panel>
       <table>
-        <search base="TstatsBaseSearch">
+        <search base="MainBaseSearch">
           <query>| where like (community_id, $cid|s$)
 | eval Time=_time
 | appendpipe[| where payload_printable="" | eval payload_printable="No Payload"]
 | where !like (payload_printable, "")
-| table severity, SID, src_ip, dest_ip, payload_printable, community_id, _time, Time
+| table severity, SID, src_ip, dest_ip, payload_printable, community_id, Time
 $HighToLow$
 $Formating$</query>
         </search>
@@ -329,7 +346,7 @@ $Formating$</query>
       <table>
         <option name="link.visible">false</option>
         <title>Select An IP</title>
-        <search base="TstatsBaseSearch">
+        <search base="MainBaseSearch">
           <query>$IPEval$
 | where like (ExternalSouce, "True") AND !like (ExternalDest, "True")
 | stats count by severity, SID, src_ip, dest_ip
@@ -351,7 +368,7 @@ $Formating$</query>
       <table>
         <option name="link.visible">false</option>
         <title>Select An IP</title>
-        <search base="TstatsBaseSearch">
+        <search base="MainBaseSearch">
           <query>$IPEval$
 | where !like (ExternalSouce, "True") AND like (ExternalDest, "True")
 | stats count by severity, SID, src_ip, dest_ip
