--- a/TA-SecOnion_Hunting/default/data/ui/views/suricata_alert_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/suricata_alert_overview.xml
@@ -6,16 +6,19 @@
 | rename alerts.severity AS severity, alerts.signature AS signature, alerts.category AS category, alerts.src_ip AS src_ip, alerts.src_port AS src_port, alerts.dest_ip AS dest_ip, alerts.dest_port AS dest_port, alerts.proto AS proto, alerts.sid AS SID, alerts.community_id AS community_id, alerts.payload_printable AS payload_printable
 | stats count by severity, signature, category, src_ip, src_port, dest_ip, dest_port, proto, SID, community_id, payload_printable, _time
 
-```Filter Out Specific Alerts Here```
-| where !like (signature, "ET DNS Query for .cc TLD") AND !like (dest_ip,"1.1.1.1")
-
-```Rule Filtering```
-| where !like (signature, "ET SCAN Suspicious%")
-| where !like (signature, "ET SCAN Behavioral Unusual%")
+```Filter Out Specific Rules Here```
+```FILTER```
 
 </query>
     <earliest>$time.earliest$</earliest>
     <latest>$time.latest$</latest>
+    <progress>
+      <unset token="Results Loading"></unset>
+      <unset token="IPEval"></unset>
+      <unset token="HighToLow"></unset>
+      <unset token="Formating"></unset>
+      <unset token="HighPort"></unset>
+    </progress>
     <done>
       <!--Set Your Zeek Indexes -->
       <set token="zeek">zeek*</set>
@@ -49,12 +52,13 @@ match(src_ip,"^((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\.?\b){4}$"),"True")</set>
 | mvexpand src_port
 | mvexpand dest_port
 | where (src_port &lt; tonumber(1025) OR src_port = "High Port") AND (dest_port &lt; tonumber(1025) OR dest_port = "High Port")</set>
+      <set token="Loading">1</set>
       <unset token="sid"></unset>
       <unset token="ip"></unset>
       <unset token="cid"></unset>
     </done>
   </search>
-    <search id="ScannerBaseSearch">
+  <search id="ScannerBaseSearch">
     <query>| tstats summariesonly=f count from datamodel=Suricata_Suite.alerts by alerts.severity, alerts.signature, alerts.category, alerts.src_ip, alerts.src_port, alerts.dest_ip, alerts.dest_port, alerts.proto, alerts.sid, alerts.community_id, alerts.payload_printable, _time
 | rename alerts.severity AS severity, alerts.signature AS signature, alerts.category AS category, alerts.src_ip AS src_ip, alerts.src_port AS src_port, alerts.dest_ip AS dest_ip, alerts.dest_port AS dest_port, alerts.proto AS proto, alerts.sid AS SID, alerts.community_id AS community_id, alerts.payload_printable AS payload_printable
 | stats count by severity, signature, category, src_ip, src_port, dest_ip, dest_port, proto, SID, community_id, payload_printable, _time
@@ -62,9 +66,7 @@ match(src_ip,"^((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\.?\b){4}$"),"True")</set>
     <earliest>$time.earliest$</earliest>
     <latest>$time.latest$</latest>
     <done>
-      <set token="showscanner">ShowMe</set>
       <set token="ScannerQuery">| stats count by src_ip, scannertype
-| where count&gt;15
 | fields - count
 | mvcombine src_ip
 | rename src_ip AS "Scanner IP", scannertype AS "Scanner Type"</set>
@@ -83,6 +85,13 @@ match(src_ip,"^((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\.?\b){4}$"),"True")</set>
       </default>
     </input>
   </fieldset>
+  <row rejects="$Loading$">
+    <panel>
+      <html>
+      <h1>RESULTS LOADING...</h1>
+    </html>
+    </panel>
+  </row>
   <row>
     <panel>
       <title>Total Alerts</title>
@@ -310,7 +319,7 @@ $Formating$</query>
 | eval Time=_time
 | appendpipe[| where payload_printable="" | eval payload_printable="No Payload"]
 | where !like (payload_printable, "")
-| table severity, SID, src_ip, dest_ip, payload_printable, community_id, Time
+| table severity, SID, src_ip, dest_ip, payload_printable, community_id, _time, Time
 $HighToLow$
 $Formating$</query>
         </search>
