--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_conn_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_conn_overview.xml
@@ -1,5 +1,6 @@
 <form version="1.1" theme="dark">
   <label>Zeek Conn Overview (V1.0.1)</label>
+  <description>V1 Additions: Initial Dashboard</description>
   <search id="BaseSearch">
     <query>
       | tstats summariesonly=f count from datamodel=Zeek_Suite.Conn by Conn.src_ip, Conn.src_port, Conn.dest_ip, Conn.dest_port, Conn.conn_state, Conn.service, Conn.uid, _time
