--- a/TA-SecOnion_Hunting/default/data/ui/views/suricata_ip_lookup.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/suricata_ip_lookup.xml
@@ -21,7 +21,7 @@
 | eval sorter=case(severity="High",1,severity="Medium",2,severity="Low",3)
 | sort by sorter,-count
 | fields - sorter</set>
-      <set token="Formatting">| appendpipe [| stats count | where count=0 | eval severity="No Instances Found"]
+      <set token="Formating">| appendpipe [| stats count | where count=0 | eval severity="No Instances Found"]
 | rename severity AS Severity, count AS Count, signature AS Signature, category AS Category, src_ip AS Source, dest_ip AS Destination, src_port AS "Source Port", dest_port AS "Destination Port", proto AS Protocol, community_id AS "Community ID"</set>
       <set token="HighPort">| eval src_port=tonumber(src_port)
 | eval dest_port=tonumber(dest_port)
@@ -32,7 +32,11 @@
 | where (src_port &lt; tonumber(1025) OR src_port = "High Port") AND (dest_port &lt; tonumber(1025) OR dest_port = "High Port")</set>
       <unset token="sid"></unset>
       <unset token="cid"></unset>
+      <unset token="Loading"></unset>
     </progress>
+    <done>
+      <set token="Loading">1</set>
+    </done>
   </search>
   <fieldset submitButton="true" autoRun="true">
     <input type="time" token="Time">
@@ -48,6 +52,13 @@
       <initialValue>1.1.1.1</initialValue>
     </input>
   </fieldset>
+    <row rejects="$Loading$">
+    <panel>
+      <html>
+      <h1>RESULTS LOADING...</h1>
+    </html>
+    </panel>
+  </row>
   <row>
     <panel>
       <title>Total Alerts</title>
@@ -75,7 +86,7 @@
         <search base="TstatsBaseSearch">
           <query>| stats count by severity
 $HighToLow$
-$Formatting$</query>
+$Formating$</query>
         </search>
         <option name="link.visible">false</option>
         <option name="drilldown">none</option>
@@ -96,7 +107,7 @@ $Formatting$</query>
           <query>| stats count by severity, signature
 | stats count by severity
 $HighToLow$
-$Formatting$</query>
+$Formating$</query>
         </search>
         <option name="link.visible">false</option>
         <option name="drilldown">none</option>
@@ -127,7 +138,7 @@ $Formatting$</query>
         <search base="TstatsBaseSearch">
           <query>| stats count by severity, signature, category, SID
 $HighToLow$
-$Formatting$</query>
+$Formating$</query>
           <done>
             <unset token="sid"></unset>
             <unset token="cid"></unset>
@@ -171,7 +182,7 @@ $Formatting$</query>
 $HighPort$
 | stats count by severity, signature, category, SID, src_ip, src_port, dest_ip, dest_port, proto, community_id
 $HighToLow$
-$Formatting$</query>
+$Format$</query>
         </search>
         <option name="drilldown">cell</option>
         <option name="refresh.display">progressbar</option>
@@ -199,7 +210,7 @@ $Formatting$</query>
 | appendpipe[| where payload_printable="" | eval payload_printable="No Payload"]
 | where !like (payload_printable, "")
 $HighToLow$
-$Formatting$</query>
+$Formating$</query>
         </search>
         <option name="drilldown">cell</option>
         <option name="link.visible">0</option>
