--- a/TA-SecOnion_Hunting/default/data/ui/views/suricata_ip_lookup.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/suricata_ip_lookup.xml
@@ -1,5 +1,6 @@
 <form version="1.1" theme="dark">
-  <label>Suricata Alert IP Lookup</label>
+  <label>Suricata Alert IP Lookup (V1.0.3)</label>
+  <description>V1 Additions: Initial Dashboard</description>
   <search id="TstatsBaseSearch">
     <query>| tstats summariesonly=f count from datamodel=Suricata_Suite.alerts by alerts.severity, alerts.signature, alerts.category, alerts.src_ip, alerts.src_port, alerts.dest_ip, alerts.dest_port, alerts.proto, alerts.sid, alerts.community_id, alerts.payload_printable, _time
 | rename alerts.severity AS severity, alerts.signature AS signature, alerts.category AS category, alerts.src_ip AS src_ip, alerts.src_port AS src_port, alerts.dest_ip AS dest_ip, alerts.dest_port AS dest_port, alerts.proto AS proto, alerts.sid AS SID, alerts.community_id AS community_id, alerts.payload_printable AS payload_printable
@@ -181,7 +182,7 @@ $Formating$</query>
 $HighPort$
 | stats count by severity, signature, category, SID, src_ip, src_port, dest_ip, dest_port, proto, community_id
 $HighToLow$
-$Format$</query>
+$Formating$</query>
         </search>
         <option name="drilldown">cell</option>
         <option name="refresh.display">progressbar</option>
