--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_conn_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_conn_overview.xml
@@ -77,7 +77,7 @@
       </chart>
     </panel>
     <panel>
-      <title>Top Source Subnets</title>
+      <title>Top Source CIDR16 Subnets</title>
       <chart>
         <search base="BaseSearch">
           <query>$CIDR16$
