--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_conn_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_conn_overview.xml
@@ -53,6 +53,8 @@
           <query>| stats count</query>
         </search>
         <option name="drilldown">none</option>
+        <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
+        <option name="underLabel">Excluding Known Scanners</option>
       </single>
     </panel>
   </row>
